# c8-atlas

./: .env  .gitignore  README.md  docker-compose.observer.yml  pyproject.toml
docker/: Dockerfile
src/atlas/: __init__.py  app.py  config.py  digest.py  metrics.py  models.py
src/atlas/integrations/: airflow.py  slack.py
